[project]
name = "proxy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.37.1",
    "baml-py>=0.64.0",
    "fastapi[standard]>=0.115.4",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]
